--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,29 @@
 version: "3.1"
 
 services:
+  api:
+    build:
+      context: ./api
+      # Only will build development stage from our dockerfile
+      target: development
+    volumes:
+      - ./api:/usr/src/app
+      - ./usr/src/app/node_modules # This is the only change
+    env_file:
+      - .env
+    command: npm run start:$STAGE
+    ports:
+      - 3000:3000
+
   psql:
     image: postgres
     restart: always
     environment:
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
     volumes:
-      - card-app-data:/var/lib/postgresql/data
+      - data:/var/lib/postgresql/data
 
   adminer:
     image: adminer
@@ -17,4 +32,4 @@ services:
       - 8080:8080
 
 volumes:
-  card-app-data:
+  data:
