--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.2",
@@ -19,11 +21,16 @@
     "react-hook-form": "^7.36.1"
   },
   "devDependencies": {
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.2.0",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "cypress": "10.1.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "typescript": "4.8.3"
   }
 }
