--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@testing-library/jest-dom": "^5.16.5",
     "framer-motion": "^6.5.1",
     "next": "12.3.0",
     "react": "18.2.0",
@@ -21,15 +22,17 @@
     "react-hook-form": "^7.36.1"
   },
   "devDependencies": {
+    "@nestjs/testing": "^9.1.4",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.2.0",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "cypress": "10.1.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
-    "jest": "28.1.1",
+    "jest": "^28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "typescript": "4.8.3"
   }
