--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "framer-motion": "^6.5.1",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.36.1"
+    "react-hook-form": "^7.36.1",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@nestjs/testing": "^9.1.4",
