--- a/client/package.json
+++ b/client/package.json
@@ -11,32 +11,32 @@
     "cypress": "cypress open"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.3.2",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@reduxjs/toolkit": "^1.8.6",
+    "@chakra-ui/react": "^2.3.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "framer-motion": "^6.5.1",
-    "next": "12.3.0",
+    "framer-motion": "^7.6.5",
+    "next": "^13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.36.1",
+    "react-hook-form": "^7.39.2",
     "react-icons": "^4.6.0",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@nestjs/testing": "^9.1.4",
-    "@testing-library/react": "13.3.0",
-    "@testing-library/user-event": "14.2.0",
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
-    "@types/react-dom": "18.0.6",
+    "@nestjs/testing": "^9.2.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "cypress": "10.1.0",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "typescript": "4.8.3"
+    "cypress": "^11.0.1",
+    "eslint": "^8.27.0",
+    "eslint-config-next": "^13.0.2",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "typescript": "^4.8.4"
   }
 }
